# rbackup2-poc

client/: Cargo.toml
client/src/: main.rs  remote.rs
client/src/backend/: mod.rs
libs/common/: Cargo.toml
libs/common/src/: structs.rs
libs/common/src/utils/: async_reader.rs  mod.rs
libs/rdedup/lib/: Cargo.toml
libs/rdedup/lib/src/: lib.rs
libs/rdedup/lib/src/aio/: backend.rs  local.rs  mod.rs  remote.rs
server/: Cargo.toml
server/src/: backend_pool.rs  main.rs
server/src/handlers/: blocking_writer.rs  mod.rs
