[package]
name = "rbackup2-client"
version = "0.1.0"
authors = ["Jan Kolena <jendakolena@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "~0.7"
err-context = "~0.1"
futures = "~0.3"
hex = "~0.4"
libcommon = { path = "../libs/common" }
log = "~0.4"
once_cell = "~1.3"
rdedup-lib = { path = "../libs/rdedup/lib" }
reqwest = { version = "~0.10", features = ["json", "stream", "blocking", "gzip"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
sha2 = "~0.9"
sgdata = { path = "../libs/rdedup/sgdata" }
tokio = { version = "~0.3", features = ["full"] }
url = "~2"
url1 = { version = "~1", package = "url" }
uuid = { version = "~0.8", features = ["serde", "v4"] }
