[package]
name = "rbackup2-server"
version = "0.1.0"
authors = ["Jan Kolena <jendakolena@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "~1.1"
actix-http = "~2.1"
actix-web = "~3.2"
async-trait = "~0.1"
bumpalo = { version = "~3.4", features = ["collections"] }
env_logger = "~0.7"
err-context = "~0.1"
futures = "~0.3"
hex = "~0.4"
object-pool = "~0.5"
once_cell = "~1.3"
log = "~0.4"
libcommon = { path = "../libs/common" }
rdedup-lib = { path = "../libs/rdedup/lib" }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
sha2 = "~0.9"
sgdata = { path = "../libs/rdedup/sgdata" }
url = "~2"
uuid = { version = "~0.8", features = ["serde", "v4"] }
vmap = "~0.4"
