[package]
name = "libcommon"
version = "0.1.0"
authors = ["Jan Kolena <jendakolena@gmail.com>"]
edition = "2018"

[lib]
name = "libcommon"
path = "src/lib.rs"

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
uuid = { version = "~0.8", features = ["serde", "v4"] }
